# conways-game-of-life

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gameoflife.c  gameoflife.h  main  main.c
